# keyseebee

firmware/: Cargo.toml  build-debug.sh  build.sh  erase-and-flash.sh  erase-bootloader.sh  flash-jlink.sh  flash.jlink  flash.sh  jlink.nix  memory.x  openocd.cfg  rust-toolchain.toml  shell.nix  test.sh
firmware/src/: codec.rs  layers.rs  lib.rs  main.rs
firmware/stuff/: Cargo.toml
firmware/stuff/src/: codec.rs  crc8.rs  dimensions.rs  layers.rs  lib.rs
