[package]
name = "keyseebee"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
#stm32f0xx-hal = { version = "0.17.0", features = ["rt", "stm32f072", "stm32-usbd"] }
atsamd-hal = {version = "*", default-features=false, features = ["usb"]}
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
panic-halt = "0.2.0"
keyberon = "0.1.0"
cortex-m-rtic = "0.5"
generic-array = "0.13"
embedded-hal = "0.2"
usb-device = "0.2"
nb = "1.0.0"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = false

[features]
# ask the HAL to enable atsamd21e18a support
default = ["rt", "atsamd-hal/samd21e18a", "unproven"]
#rt = ["cortex-m-rt", "atsamd-hal/samd21e18a-rt"]
rt = ["atsamd-hal/samd21e18a-rt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []
