[package]
name = "keyseebee"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
atsamd-hal = {path = "../../oss/atsamd/hal", default-features=false, features = ["usb", "samd21e", "samd21e-rt", "unproven"]}
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
panic-halt = "0.2.0"
keyberon = "0.1.0"
cortex-m-rtic = "0.5"
generic-array = "0.13"
embedded-hal = "0.2"
usb-device = "0.2"
nb = "1.0.0"
itertools = {version ="0.9", default-features=false}
arrayvec = {version="0.5", default-features=false}

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true

[profile.dev]
lto = true
incremental = false
# opt-level = "s"
debug = true
codegen-units = 1 # better optimizations

# don't optimize the `cortex-m-rt` crate
[profile.dev.package.cortex-m-rt] # +
opt-level = 0 # +

# but do optimize all the other dependencies
[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"

[features]
default = ["atsamd-hal/samd21e", "atsamd-hal/samd21e-rt", "atsamd-hal/unproven"]
#rt = ["cortex-m-rt", "atsamd-hal/samd21e18a-rt"]
# use_semihosting = []
 