[package]
name = "keyseebee"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
atsamd-hal = {path = "../../oss/atsamd/hal", default-features=false, features = ["usb", "samd21e", "samd21e-rt", "unproven"]}
cortex-m = "0.6"
cortex-m-rt = { version = "*", features = ["device"] }
panic-halt = "*"
keyberon = {path = "../../oss/keyberon"}
keyberon-macros = {path = "../../oss/keyberon/keyberon-macros"}
cortex-m-rtic = "*"
generic-array = "*"
embedded-hal = "*"
usb-device = "*"
nb = "0.1"
itertools = {version ="*", default-features=false}
arrayvec = {version="*", default-features=false}
stuff = {path = "./stuff"}

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true

[profile.dev]
lto = 'fat'
incremental = false
opt-level = "s"
debug = true
codegen-units = 1 # better optimizations

# don't optimize the `cortex-m-rt` crate
[profile.dev.package.cortex-m-rt] # +
opt-level = 0 # +
debug = true

[profile.dev.package.stuff] # +
opt-level = 0 # +
debug = true

# but do optimize all the other dependencies
[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"
debug = false

[features]
default = ["atsamd-hal/samd21e", "atsamd-hal/samd21e-rt", "atsamd-hal/unproven"]
#rt = ["cortex-m-rt", "atsamd-hal/samd21e18a-rt"]
# use_semihosting = []
 
